# semantic-notebook

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
notebook/: __main__.py  app.py  build.py  clusters.py  config.py  embeddings.py  index.py  linker.py  search.py  store.py  wiki.py
notebook/editor/: __main__.py  app.py  buffer.py
notebook/utils/: balanced.py
notebook/widgets/: cluster_view.py  link_panel.py  note_list.py  note_viewer.py  search_bar.py
notes/: 20260409-132032.md  20260410-063132.md  CLAUDE.md  concurrency-in-semantic-notebook.md  docker-basics.md  git-workflow.md  gui-model-language.md  human-vs-machine-learning.md  index.md  kubernetes-overview.md  log.md  machine-learning-intro.md  making-concurrency-explicit.md  neural-networks.md  pipelines-and-seams.md  posix-and-accidental-concurrency.md  python-async.md  semantic-notebook-specification.md
