[project]
name = "semantic-notebook"
version = "0.1.0"
description = "Markdown note organization with semantic search, clustering, and linking"
requires-python = ">=3.11"
dependencies = [
    "chromadb",
    "sentence-transformers",
    "textual",
    "rich",
    "scikit-learn",
]

[project.scripts]
notebook = "notebook.__main__:main"

[tool.setuptools]
packages = ["notebook", "notebook.editor", "notebook.widgets", "notebook.utils"]

